--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,16 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx3G
 org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 minecraft_version=1.21.7
 yarn_mappings=1.21.7+build.8
-loader_version=0.17.2
+loader_version=0.16.13
 loom_version=1.11-SNAPSHOT
 
 # Mod Properties
-mod_version=0.0.1
+mod_version=0.0.4-beta
 maven_group=com.wimf
 archives_base_name=whoismyfriendswimf
 
